# doc-update-agent

./: .env.example  .gitignore  README.md  config.example.yaml  prompts.txt  pyproject.toml
src/doc_updater/: __main__.py  agents.py  cli.py  config.py  hooks.py  models.py  orchestrator.py  output.py  permissions.py  prompts.py  tools.py
